- Add util/load module (#34).
- Allow loading modules from $FLUSSPFERD_USER_MODULES or
  $HOME/.flusspferd/modules (#116).
- Overload flusspferd::is_native & flusspferd::get_native for classes deriving
  from native_function_base (#131).
- create<NativeFunction> now passes name and arity to the constructor of
  NativeFunction by default (#176).

2009-11-14:
- Add object::set_properties and object::define_properties for setting or
  defining multiple properties at once (#151).

2009-11-13:
- Add extendLeft and extendRight methods to ByteArray (#160).

2009-10-30:
- object::get_property_attributes API changed.
- changed object to provide an id based API for properties (#155).
- Boost 1.40 required.

2009-10-26:
- Replace create_* with create<> (#147).

2009-10-25:
- Better toString and toSource for native objects (#139).
- Allow enabling the Tracemonkey JIT mode from C++ (#140).
- Add == for flusspferd::value (#141).
- Add push for flusspferd::array (#144).
- Adapt array::set_element to object::set_property interface (#146).
- Renamed exception::empty to excepion::is_js_exception.

2009-10-24:
- Remove support for old Spidermonkey versions.
- Constructor of root_* now explicit (#124).

Release 0.8
-----------

2009-10-20:
- Alias 'fs-base' to 'filesystem-base' module

2009-10-17:
- '--interactive' flag to the REPL will now enter interactive mode even after
  call to quit() or an exception is thrown

2009-10-10:
- A largely complete implementation of CommonJS 'filesystem-base' module
  (http://wiki.commonjs.org/wiki/Filesystem/A/0). This is only a proposal, so
  might change.
- Treat JS files as UTF-8

2009-10-04:
- native_function_base object now has a trace() method

2009-09-27:
- repl now prints v.to_source to give better output for objects.

2009-09-26:
- Change how (pure JS) modules are loaded to preserve JIT and isolate scopes
  better
- Enable spidermonkey's strict mode warnings for all modules

2009-09-19:
- Overhauled SQLite3 module (issue #103).

2009-09-20: