@@ -28,6 +28,7 @@ THE SOFTWARE.
 #define FLUSSPFERD_EXCEPTION_HPP
 
 #include <boost/exception/exception.hpp>
+#include <boost/format.hpp>
 #include <boost/shared_ptr.hpp>
 #include <stdexcept>
 
@@ -70,8 +71,21 @@ struct exception : virtual std::runtime_error, virtual boost::exception {
    *
    * Will create an exception containing @p val. The error message will be the
    * string representation of @p val.
+   *
+   * @param val The value to stringify.
    */
   exception(value const &val);
+
+  /**
+   * Format constructor.
+   *
+   * Will create an exception of type @p type from the given (completed)
+   * boost::format.
+   *
+   * @param what The error message.
+   * @param type The error type (if applicable).
+   */
+  exception(boost::format const &fmt, std::string const &type = "Error");
 
   /// Destructor.
   ~exception() throw();
